<resources>
    <string name="app_name">Calculator</string>
    <string name="screenDisplay">0</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="positiveNegative">+/-</string>
    <string name="deciminalSeparator">,</string>
    <string name="backSpace">⌫</string>
    <string name="cleanEnd">ce</string>
    <string name="cleanAll">c</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="multiply">×</string>
    <string name="division">÷</string>
    <string name="fraction">1/x</string>
    <string name="square">√x</string>
    <string name="power">x²</string>
    <string name="percent">%</string>
    <string name="equals">=</string>
    <string name="eighty_eight">
Восемьдесят восемь\n\n
Понимаешь,\n
трудно говорить мне с тобой:\n
в целом городе у вас —\n
ни снежинки.\n
В белых фартучках\n
школьницы идут\n
гурьбой,\n
и цветы продаются на Дзержинке.\n
Там у вас — деревья в листве…\n
А у нас, —\n
за версту,\n
наверное,\n
слышно, —\n
будто кожа новая,\n
поскрипывает наст,\n
а в субботу будет кросс\n
лыжный…\n
\n
Письма очень долго идут.\n
Не сердись.\n
Почту обвинять\n
не годится…\n
Рассказали мне:\n
жил один влюбленный радист\n
до войны на острове Диксон.\n
Рассказали мне:\n
был он\n
не слишком смел\n
и любви привык\n
сторониться.\n
А когда пришла она,\n
никак не умел\n
с девушкой-радисткой\n
объясниться…\n
Но однажды\n
в вихре приказов и смет,\n
график передачи ломая,\n
выбил он:\n
ЦЕЛУЮ!\n
И принял в ответ:\n
Что передаешь?\n
Не понимаю…\n
\n
Предпоследним словом\n
себя обозвав,\n
парень объясненья не бросил.\n
Поцелуй\n
восьмерками зашифровав,\n
он отстукал\n
ВОСЕМЬДЕСЯТ ВОСЕМЬ!\n
Разговор дальнейший\n
был полон огня:\n
Милая,\n
пойми человека!\n
(Восемьдесят восемь!)\n
Как слышно меня?\n
(Восемьдесят восемь!)\n
Проверка.\n
\n
Он выстукивал восьмерки\n
упорно и зло.\n
Днем и ночью.\n
В зиму и в осень.\n
Он выстукивал,\n
пока\n
в ответ не пришло:\n
Понимаю,\n
восемьдесят восемь!..\n
\n
Я не знаю,\n
может,\n
все было не так.\n
Может —\n
более обыденно,\n
пресно…\n
Только верю твердо:\n
жил такой чудак!\n
Мне в другое верить\n
неинтересно…\n
\n
Вот и я\n
молчание\n
не в силах терпеть!\n
И в холодную небесную просинь\n
сердцем\n
выстукиваю\n
тебе:\n
Милая!\n
Восемьдесят восемь!..\n
Слышишь?\n
Эту цифру я молнией шлю.\n
Мчать ей\n
через горы и реки…\n
Восемьдесят восемь!\n
Очень люблю.\n
Восемьдесят восемь!\n
Навеки.\n\n
Роберт Рождественский</string>
    <string name="love_story">Вика = Моя любовь</string>
    <string name="out_of_range">Out of range</string>
</resources>