<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    tools:context="ru.junJavaDev.calculator.CalcActivity">

    <Button
        android:id="@+id/btCleanAllText"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="2dp"
        android:backgroundTint="@color/white"
        android:text="@string/cleanAll"
        android:textColor="@color/black"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@id/btSquare"
        app:layout_constraintEnd_toStartOf="@+id/btBackSpace"
        app:layout_constraintStart_toEndOf="@+id/btCleanEnd" />

    <Button
        android:id="@+id/btCleanEnd"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="2dp"
        android:backgroundTint="@color/white"
        android:text="@string/cleanEnd"
        android:textColor="@color/black"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@id/btPower"
        app:layout_constraintEnd_toStartOf="@+id/btCleanAllText"
        app:layout_constraintStart_toEndOf="@+id/btPercent" />

    <Button
        android:id="@+id/btPercent"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="2dp"
        android:backgroundTint="@color/white"
        android:text="@string/percent"
        android:textColor="@color/black"
        android:textSize="34sp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@id/btFraction"
        app:layout_constraintEnd_toStartOf="@+id/btCleanEnd"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btBackSpace"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="2dp"
        android:backgroundTint="@color/white"
        android:text="@string/backSpace"
        android:textColor="@color/black"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@id/btDivision"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btCleanAllText" />

    <Button
        android:id="@+id/btDivision"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="2dp"
        android:backgroundTint="@color/white"
        android:text="@string/division"
        android:textColor="@color/black"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/btMultiply"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btSquare" />

    <Button
        android:id="@+id/btFraction"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="2dp"
        android:backgroundTint="@color/white"
        android:text="@string/fraction"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/btSeven"
        app:layout_constraintEnd_toStartOf="@+id/btPower"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btPower"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="2dp"
        android:backgroundTint="@color/white"
        android:text="@string/power"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/btEight"
        app:layout_constraintEnd_toStartOf="@+id/btSquare"
        app:layout_constraintStart_toEndOf="@+id/btFraction" />

    <Button
        android:id="@+id/btSquare"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="2dp"
        android:backgroundTint="@color/white"
        android:text="@string/square"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/btNine"
        app:layout_constraintEnd_toStartOf="@+id/btDivision"
        app:layout_constraintStart_toEndOf="@+id/btPower" />

    <Button
        android:id="@+id/btNine"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="2dp"
        android:backgroundTint="@color/white"
        android:text="@string/nine"
        android:textColor="@color/black"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/btSix"
        app:layout_constraintEnd_toStartOf="@id/btMultiply"
        app:layout_constraintStart_toEndOf="@id/btEight" />

    <Button
        android:id="@+id/btMultiply"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="2dp"
        android:backgroundTint="@color/white"
        android:text="@string/multiply"
        android:textColor="@color/black"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/btMinus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btNine" />

    <Button
        android:id="@+id/btEight"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="2dp"
        android:backgroundTint="@color/white"
        android:text="@string/eight"
        android:textColor="@color/black"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/btFive"
        app:layout_constraintEnd_toStartOf="@+id/btNine"
        app:layout_constraintStart_toEndOf="@id/btSeven" />

    <Button
        android:id="@+id/btFour"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="2dp"
        android:backgroundTint="@color/white"
        android:text="@string/four"
        android:textColor="@color/black"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/btOne"
        app:layout_constraintEnd_toStartOf="@+id/btFive"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btSix"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="2dp"
        android:backgroundTint="@color/white"
        android:text="@string/six"
        android:textColor="@color/black"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/btThree"
        app:layout_constraintEnd_toStartOf="@+id/btMinus"
        app:layout_constraintStart_toEndOf="@+id/btFive" />

    <Button
        android:id="@+id/btMinus"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="2dp"
        android:backgroundTint="@color/white"
        android:text="@string/minus"
        android:textColor="@color/black"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/btPlus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btSix" />

    <Button
        android:id="@+id/btFive"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="2dp"
        android:backgroundTint="@color/white"
        android:text="@string/five"
        android:textColor="@color/black"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/btTwo"
        app:layout_constraintEnd_toStartOf="@+id/btSix"
        app:layout_constraintStart_toEndOf="@id/btFour" />

    <Button
        android:id="@+id/btSeven"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="2dp"
        android:backgroundTint="@color/white"
        android:text="@string/seven"
        android:textColor="@color/black"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/btFour"
        app:layout_constraintEnd_toStartOf="@+id/btEight"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btOne"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="2dp"
        android:backgroundTint="@color/white"
        android:text="@string/one"
        android:textColor="@color/black"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/btPositiveNegative"
        app:layout_constraintEnd_toStartOf="@+id/btTwo"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btTwo"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="2dp"
        android:backgroundTint="@color/white"
        android:text="@string/two"
        android:textColor="@color/black"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/btZero"
        app:layout_constraintEnd_toStartOf="@+id/btThree"
        app:layout_constraintStart_toEndOf="@id/btOne" />

    <Button
        android:id="@+id/btThree"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="2dp"
        android:backgroundTint="@color/white"
        android:text="@string/three"
        android:textColor="@color/black"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/btDeciminalSeparator"
        app:layout_constraintEnd_toStartOf="@id/btPlus"
        app:layout_constraintStart_toEndOf="@id/btTwo" />

    <Button
        android:id="@+id/btPlus"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="2dp"
        android:backgroundTint="@color/white"
        android:text="@string/plus"
        android:textColor="@color/black"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/btEquals"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btThree" />

    <Button
        android:id="@+id/btPositiveNegative"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="4dp"
        android:backgroundTint="@color/white"
        android:text="@string/positiveNegative"
        android:textColor="@color/black"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btZero"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btZero"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="4dp"
        android:backgroundTint="@color/white"
        android:text="@string/zero"
        android:textColor="@color/black"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btDeciminalSeparator"
        app:layout_constraintStart_toEndOf="@+id/btPositiveNegative" />

    <Button
        android:id="@+id/btDeciminalSeparator"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="4dp"
        android:backgroundTint="@color/white"
        android:text="@string/deciminalSeparator"
        android:textColor="@color/black"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btEquals"
        app:layout_constraintStart_toEndOf="@+id/btZero" />

    <Button
        android:id="@+id/btEquals"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="4dp"
        android:backgroundTint="@color/blue"
        android:text="@string/equals"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btDeciminalSeparator" />

    <TextView
        android:id="@+id/screenDisplay"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="2dp"
        android:gravity="center"
        android:text="@string/zero"
        android:textColor="@color/black"
        android:textSize="60sp"
        app:layout_constraintBottom_toTopOf="@+id/btBackSpace"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>